ingress/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-react-ingress
  namespace: nginx
spec:
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: /nginx
            backend:
              service: 
                name: nginx-service
                port: 
                  number: 8080
          - pathType: Prefix
            path: /react
            backend:
              service:
                name: react-app-service
                port: 
                  number: 3000
